# slogpp

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  README.md
benchmarks/: Ansi.cpp  Ansi.hpp  Benchmark.cpp  Benchmark.hpp  BenchmarkData.cpp  BenchmarkData.hpp  Benchmarker.cpp  Benchmarker.hpp  CMakeLists.txt  Types.hpp  main.cpp
cmake/: #GitVersion.cmake#  GitVersion.cmake
include/slog++/: Attribute.hpp  AttributeImpl.hpp  AttributeTest.cpp  AttributeTest.hpp  CMakeLists.txt  Config.hpp  ConfigImpl.hpp  ConfigTest.cpp  FileSink.hpp  Formatters.hpp  FormattersImpl.hpp  FormattersTest.cpp  Level.hpp  Logger.hpp  Logger.imp.hpp  LoggerImpl.hpp  LoggerTest.cpp  LoggerTest.hpp  MatcherTest.hpp  MockSink.hpp  Record.hpp  RecordImpl.hpp  Sink.hpp  Sink.imp.hpp  SinkDetails.hpp  TeeSink.hpp  TeeSinkTest.cpp  Types.hpp  Version.hpp.in  slog++.hpp  slog++Impl.hpp  slog++Test.cpp
include/slog++/details/: String.hpp  StringTest.cpp
include/slog++/utils/: Array.hpp  ContainerReferenceImpl.hpp  ObjectPoolImpl.hpp  ObjectPoolTest.cpp  ThreadPool.hpp
include/src/: slog++.cpp
src/apollo/: CMakeLists.txt  Display.cpp  Display.hpp  Grabber.cpp  Grabber.hpp  StubGrabber.cpp  StubGrabber.hpp  Types.hpp  main.cpp
src/apollo/ui/: Display.cpp  Display.hpp  VertexBufferObject.cpp  VertexBufferObject.hpp
src/apollo/utils/: Defer.hpp  DeferTest.cpp  DeferTest.hpp
src/slog++/: Attribute.hpp  AttributeImpl.hpp  AttributeTest.cpp  CMakeLists.txt  Config.hpp  ConfigImpl.hpp  ConfigTest.cpp  FileSink.hpp  Formatters.hpp  FormattersImpl.hpp  FormattersTest.cpp  Level.hpp  Logger.hpp  LoggerImpl.hpp  LoggerTest.cpp  LoggerTest.hpp  MockSink.hpp  Record.hpp  RecordImpl.hpp  Sink.hpp  SinkDetails.hpp  Sinks.hpp  SinksImpl.hpp  Types.hpp  Utils.hpp  UtilsImpl.hpp  slog++.cpp.in  slog++.hpp  slog++Impl.hpp
src/slog++/utils/: ContainerReference.hpp  ObjectPool.hpp
tests/: CMakeLists.txt  Logger.cpp  Logger.hpp
